2024-05-09T08:15:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9014428637 # 256
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 903 1647 / 905 1649
* notice: next accum: outdated-unq outdated-all / unq all: 903 1647 / 906 1650
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-09]

2024-05-08T16:15:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9005097012 # 254
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 902 1644 / 904 1648
* notice: next accum: outdated-unq outdated-all / unq all: 903 1647 / 905 1649
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-04-24] / [2024-05-08]

2024-05-04T08:13:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8949150364 # 241
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-04
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 901 1642 / 904 1648
* notice: next accum: outdated-unq outdated-all / unq all: 902 1644 / 904 1648
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-20] / []

2024-05-02T16:14:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8927047924 # 236