@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-09T08:15:39Z",
+  "timestamp" : "2024-05-09T16:15:29Z",
   "count_outdated" : 1647,
   "uniques_outdated" : 903,
-  "count" : 1650,
-  "uniques" : 906,
+  "count" : 1651,
+  "uniques" : 907,
   "clones" : [
     {
       "timestamp": "2024-04-30T00:00:00Z",
@@ -25,12 +25,12 @@
     },
     {
       "timestamp": "2024-05-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
