@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 4,
+  "uniques": 4,
   "clones": [
     {
       "timestamp": "2024-04-30T00:00:00Z",
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2024-05-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
